--- a/src/assets/sass/layouts/_discount-products.scss
+++ b/src/assets/sass/layouts/_discount-products.scss
@@ -22,6 +22,13 @@ padding-top: 0px;
 .discount-products__nav {
   display: flex;
   gap: 8px;
+  
+}
+
+.discount-products-next{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .discount-products__nav-btn {
@@ -30,6 +37,7 @@ padding-top: 0px;
   font-size: 1.2rem;
   cursor: pointer;
   padding: toRem(6) toRem(10);
+  
 }
 
 .discount-products-prev .icon {
